@@ -157,7 +157,7 @@ public class BangGiaService {
         List<GiaDetail> details = new ArrayList<>();
         for (LuuChiTietItem item : items) {
             String ma = item.getMaDinhDanh();
-            if (ma == null || ma.isBlank()) {
+            if (ma == null || ma.trim().isEmpty()) {
                 return "Thiếu thông tin loại ở một dòng chi tiết";
             }
             if (!seen.add(ma)) {
@@ -266,7 +266,7 @@ public class BangGiaService {
         List<GiaDetail> details = new ArrayList<>();
         for (LuuChiTietItem item : items) {
             String ma = item.getMaDinhDanh();
-            if (ma == null || ma.isBlank()) {
+            if (ma == null || ma.trim().isEmpty()) {
                 return "Thiếu thông tin loại ở một dòng chi tiết";
             }
             if (item.getDonGia() < 0) {
